# fastapi_rest

./: .gitignore  README.md
api/: main.py  pyproject.toml
api/views/routes/: auth_routes.py  order_routes.py
fastapi_rest/: main.py  pyproject.toml
