[project]
name = "fastapi-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "bcrypt>=4.3.0",
    "cffi>=1.17.1",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "cryptography>=45.0.4",
    "ecdsa>=0.19.1",
    "fastapi>=0.115.14",
    "greenlet>=3.2.3",
    "h11>=0.16.0",
    "passlib>=1.7.4",
    "pyasn1>=0.6.1",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.41",
    "starlette>=0.46.2",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
lint = [
    "ruff>=0.12.1",
]
